--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "electron-version4",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": false,
   "scripts": {
     "lint": "vue-cli-service lint",
     "build": "vue-cli-service electron:build",
-    "serve": "vue-cli-service electron:serve",
+    "serve": "set TEST_ENV=development&& vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "electron:publish": "vue-cli-service electron:build --publish always"
@@ -19,8 +19,11 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "electron-updater": "^4.1.2",
+    "element-ui": "^2.12.0",
     "ffi": "^2.3.0",
     "iconv-lite": "^0.5.0",
+    "mathjs": "^6.2.3",
+    "normalize.css": "^8.0.1",
     "request": "^2.88.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
